[package]
name = "time_machine"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.98"
chrono = "0.4"
chrono-tz = "0.5.3"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
reqwest = "0.9.24"
sntpc = "0.2"
libtzfile = "2.0.1"
datetime = "0.5"